--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,12 @@
 compile.on.save=true
-file.reference.mysql-connector-j-8.0.32.jar=C:\\Program Files (x86)\\MySQL\\Connector J 8.0
-user.properties.file=C:\\Users\\Predator\\AppData\\Roaming\\NetBeans\\17\\build.properties
+do.depend=false
+do.jar=true
+do.jlink=false
+file.reference.jcalendar-1.4-src=C:\\Users\\KaiserV\\Desktop\\Connector-J-8.0\\Connector J 8.0\\CopyLibs\\org-netbeans-modules-java-j2seproject-copylibstask.jar
+file.reference.jcalendar-1.4.jar=C:\\Users\\KaiserV\\Desktop\\Connector-J-8.0\\Connector J 8.0\\CopyLibs\\org-netbeans-modules-java-j2seproject-copylibstask.jar
+file.reference.mysql-connector-j-8.0.32.jar=C:\\Users\\KaiserV\\Desktop\\Connector-J-8.0\\Connector J 8.0\\PostgreSQLDriver\\postgresql-42.2.16.jar
+file.reference.mysql-connector-j-8.0.33.jar=C:\\Users\\KaiserV\\Desktop\\Connector-J-8.0\\Connector J 8.0\\mysql-connector-j-8.0.33.jar
+javac.debug=true
+javadoc.preview=true
+jlink.strip=false
+user.properties.file=C:\\Users\\KaiserV\\AppData\\Roaming\\NetBeans\\17\\build.properties
