--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=roomease
+application.vendor=KaiserV
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,9 +33,12 @@ dist.jar=${dist.dir}/roomease.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/roomease
+endorsed.classpath=
 excludes=
+file.reference.jcalendar-1.4-lib=C:\\Users\\KaiserV\\Desktop\\jcalendar-1.4\\lib
 file.reference.jcalendar-1.4-src=C:\\Users\\Predator\\Downloads\\jcalendar-1.4\\src
 file.reference.jcalendar-1.4.jar=C:\\Users\\Predator\\Downloads\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=C:\\Users\\KaiserV\\Desktop\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.mysql-connector-j-8.0.32.jar=C:\\Program Files (x86)\\MySQL\\Connector J 8.0\\mysql-connector-j-8.0.32.jar
 file.reference.mysql-connector-j-8.0.33.jar=C:\\Program Files (x86)\\MySQL\\Connector J 8.0\\mysql-connector-j-8.0.33.jar
 includes=**
@@ -45,7 +49,8 @@ javac.classpath=\
     ${libs.PostgreSQLDriver.classpath}:\
     ${file.reference.mysql-connector-j-8.0.33.jar}:\
     ${file.reference.jcalendar-1.4-src}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar-1}:\
+    ${file.reference.jcalendar-1.4-lib}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
