--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -6,4 +6,4 @@ file.reference.mysql-connector-j-8.0.32.jar=C:\\Program Files (x86)\\MySQL\\Conn
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\Predator\\AppData\\Roaming\\NetBeans\\17\\build.properties
+user.properties.file=C:\\Users\\KaiserV\\AppData\\Roaming\\NetBeans\\17\\build.properties
