--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,17 +35,27 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/roomease
 endorsed.classpath=
 excludes=
-file.reference.jcalendar-1.4.jar-1=C:\\Users\\Predator\\Documents\\NetBeansProjects\\o\\Jcalendar\\lib\\jcalendar-1.4.jar
-file.reference.mysql-connector-j-8.0.32.jar=C:\\Program Files (x86)\\MySQL\\Connector J 8.0\\mysql-connector-j-8.0.32.jar
-file.reference.mysql-connector-j-8.0.33.jar=C:\\Program Files (x86)\\MySQL\\Connector J 8.0\\mysql-connector-j-8.0.33.jar
+file.reference.AbsoluteLayout.jar=Dependencies/AbsoluteLayout.jar
+file.reference.jcalendar-1.4.jar=Dependencies/jcalendar-1.4.jar
+file.reference.jgoodies-common-1.2.0.jar=Dependencies/jgoodies-common-1.2.0.jar
+file.reference.jgoodies-looks-2.4.1.jar=Dependencies/jgoodies-looks-2.4.1.jar
+file.reference.junit-4.6.jar=Dependencies/junit-4.6.jar
+file.reference.mysql-connector-j-8.0.33.jar=Dependencies/mysql-connector-j-8.0.33.jar
+file.reference.org-netbeans-modules-java-j2seproject-copylibstask.jar=Dependencies/org-netbeans-modules-java-j2seproject-copylibstask.jar
+file.reference.postgresql-42.2.16.jar=Dependencies/postgresql-42.2.16.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.mysql-connector-j-8.0.32.jar}:\
-    ${libs.PostgreSQLDriver.classpath}:\
+    ${file.reference.AbsoluteLayout.jar}:\
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.postgresql-42.2.16.jar}:\
+    ${file.reference.jgoodies-common-1.2.0.jar}:\
+    ${file.reference.jgoodies-looks-2.4.1.jar}:\
+    ${file.reference.junit-4.6.jar}:\
     ${file.reference.mysql-connector-j-8.0.33.jar}:\
-    ${file.reference.jcalendar-1.4.jar-1}
+    ${file.reference.org-netbeans-modules-java-j2seproject-copylibstask.jar}:\
+    ${libs.PostgreSQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
